--- a/.github/workflows/main_wildertweets.yml
+++ b/.github/workflows/main_wildertweets.yml
@@ -20,13 +20,14 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '6.0.x'
-          include-prerelease: true
+          include-prerelease: false
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build --configuration Release ./src/MyTweets.csproj
+
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp ./src/MyTweets.csproj
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
